fix: labels in page headers now readable again

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -98,6 +98,8 @@ pre
   h1
     span
       color: #777
+      &.label
+        color: #fff
     small
       display: block
 
